--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.datasource.url=jdbc:mysql://localhost:3306/rate_university_app
 spring.datasource.username=root
 spring.datasource.password=kleardo2002
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.jpa.hibernate.ddl-auto=true
+spring.jpa.hibernate.ddl-auto=none
